--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				  <span><a href="#">Contact Us</a></span>
 			  </div>
 		  </div>
-		  <div id="logo">LOGO</div>
+		  <div id="logo"><img src="assets/logo.svg"/></div>
 	  </header>
 	  <main>
 		  <div class='intro'>
@@ -42,9 +42,11 @@
 	  </section>
 	  <div class="contact-page">
 		  <span>
-			  Let's Connect
-			  <a href="https://github.com/VishnuKrishnathu"><img src="assets/github.svg" height="24px" width="24px"/></a>
-			  <a href="#"><img src="assets/linkedin.svg" height="24px" width="24px"/></a>
+			  <div>Let's Connect</div>
+			  <div>
+				  <a id="github" href="https://github.com/VishnuKrishnathu"><img src="assets/github.svg" /></a>
+				  <a id="linkedin" href="https://www.linkedin.com/in/vishnu-krishnathu-6048441b1/"><img src="assets/linkedin.svg"/></a>
+			  </div>
 		  </span>
 		  <div class="form_data">
 			  <input id="name" type="text" placeholder="Your Name"/>
