--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		  <div class="hamburger-menu">
 			  <div></div>
 			  <div class="nav_options">
-				  <span><a href="#">Home</a></span>
-				  <span><a href="#">Projects</a></span>
-				  <span><a href="#">Contact Us</a></span>
+				  <span><a href="#logo">Home</a></span>
+				  <span><a href="#proj">Projects</a></span>
+				  <span><a href="#cont-page">Contact Us</a></span>
 			  </div>
 		  </div>
 		  <div id="logo"><img src="assets/logo.svg"/></div>
@@ -34,13 +34,13 @@
 		  <div id="white_div"></div>
 	  </main>
 	  <strong style="color:#956416">Projects :</strong>
-	  <section class="projects">
+	  <section class="projects" id="proj">
 		  <div><a href="https://basicbanking-system1.herokuapp.com/">Banking System(Django)</a></div>
 		  <div><a href="https://vishnukrishnathu.github.io/WEBLETTER-/#/">Webletter App (React+Django)</a></div>
 		  <div><a href="https://github.com/VishnuKrishnathu/BankingSystem_anroidapp">Banking App (Anroid)</a></div>
 		  <div><a href="https://github.com/VishnuKrishnathu/Project-Based-Learning">Virtual Laboratory (Python)</a></div>
 	  </section>
-	  <div class="contact-page">
+	  <div class="contact-page" id="cont-page">
 		  <span>
 			  <div>Let's Connect</div>
 			  <div>
